--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -17,6 +17,7 @@
 
 @import "../node_modules/nprogress/nprogress.css";
 @import "../node_modules/shepherd.js/dist/css/shepherd.css";
+@import '../node_modules/tippy.js/dist/tippy.css';
 
 @font-face {
   font-family: bravadaArma;
