--- a/lib/moba_web/templates/battle/_pve_rewards.html.leex
+++ b/lib/moba_web/templates/battle/_pve_rewards.html.leex
@@ -75,7 +75,7 @@
         </div>
         <div class="col">
             <%=live_redirect to: Routes.live_path(@socket, MobaWeb.JungleLiveView), class: "btn btn-outline-success btn-lg btn-block", "phx-hook": "Loading", id: "load-jungle" do %>
-                <span class="loading-text"><i class="fa fa-leaf"></i> Back to the Jungle</span>
+                <span class="loading-text"><i class="fa fa-crosshairs"></i> Back to Ganking</span>
             <% end %>
         </div>
     </div>
