--- a/lib/moba_web/templates/dashboard/_hero_list.html.leex
+++ b/lib/moba_web/templates/dashboard/_hero_list.html.leex
@@ -50,7 +50,7 @@
                                 <% end %>
                             <% else %>
                                 <%= link to: "/game/continue?hero_id=#{hero.id}", class: "btn btn-success btn-lg btn-block", method: :post do %>
-                                    <i class="fa fa-leaf fa-2x"></i>
+                                    <i class="fa fa-crosshairs fa-2x"></i>
                                     <br/>
                                     Continue
                                     <br/>
