--- a/lib/moba_web/templates/hero/show.html.leex
+++ b/lib/moba_web/templates/hero/show.html.leex
@@ -1,17 +1,15 @@
 <div class="hero-review" id="hero-review">
-    <%=if finished_hero = finished_jungle?(@current_user, @hero) do %>
-        <%= render "_finished_hero.html", Map.put(assigns, :finished_hero, finished_hero)%>
-    <% else %>
-        <%= @current_hero && live_render(@socket, MobaWeb.CurrentHeroLiveView, session: %{"hero_id" => @current_hero.id}, id: "current-hero-live-view") %>
+    <%= if finished_hero = finished_jungle?(@current_user, @hero) do %>
+        <%= render "_finished_hero.html", Map.put(assigns, :finished_hero, finished_hero) %>
     <% end %>
     <div class="row mt-3">
         <div class="col-md-6 col-xl-4">
-            <div class="hero-card card " style="background-image: url(<%=GH.background_url(@hero)%>">
+            <div class="hero-card card " style="background-image: url(<%= GH.background_url(@hero) %>">
                 <div class="card-header pt-0 pb-1">
                     <h4 class="font-17 text-white d-flex justify-content-between align-items-center mb-0">
-                        <span class="font-italic level">Level<br/><span class="font-italic font-20"><%=@hero.level%></span></span>
-                        <%=live_redirect class: "text-white", to: Routes.live_path(@socket, MobaWeb.UserLiveView, @hero.user_id) do %><%=@hero.name%><%end%>
-                        <span class="font-15 font-italic"><%=@hero.avatar.name%></span>
+                        <span class="font-italic level">Level<br/><span class="font-italic font-20"><%= @hero.level %></span></span>
+                        <%=live_redirect class: "text-white", to: Routes.live_path(@socket, MobaWeb.UserLiveView, @hero.user_id) do %><%= @hero.name %><%end %>
+                        <span class="font-15 font-italic"><%= @hero.avatar.name %></span>
                     </h4>
                 </div>
                 <div class="card-body text-center">
@@ -19,16 +17,16 @@
                 <div class="transparent card-footer p-0 text-center">
                     <div class="row align-items-center d-flex ml-1 mt-1 mr-1">
                         <div class="col">
-                            <%=GH.hero_stats(@hero, true)%>
+                            <%= GH.hero_stats(@hero, true) %>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 mt-1">
                             <div class="skills-container d-flex justify-content-between">
-                                <%=GH.hero_skill_list(@hero)%>
+                                <%= GH.hero_skill_list(@hero) %>
                             </div>
                             <div class="items-container row no-gutters">
-                                <%=GH.hero_item_list(@hero)%>
+                                <%= GH.hero_item_list(@hero) %>
                             </div>
 
                         </div>
@@ -59,7 +57,7 @@
                                             <img src="/images/league_<%=tier%>.png" class="<%= tier_class(tier, @hero.league_tier) %>"/>
                                             <%= unless tier == Moba.max_league_tier() do %>
                                                 <div class="progress" style="width: 30px;height: 3px; border-radius: 0">
-                                                    <div style="width:100%" class="progress-bar <%=if tier >= @hero.league_tier, do: "bg-dark", else: "bg-primary"%>">
+                                                    <div style="width:100%" class="progress-bar <%= if tier >= @hero.league_tier, do: "bg-dark", else: "bg-primary" %>">
                                                         <span></span>
                                                     </div>
                                                 </div>
@@ -89,7 +87,7 @@
                                     <div class="row text-center">
                                         <div class="col">
                                             <h3 class="mb-0 text-danger">
-                                                #<%=@hero.pvp_ranking%>
+                                                #<%= @hero.pvp_ranking %>
                                             </h3>
                                             <h4 class="text-danger"><%= if @hero.id == @hero.user.current_pvp_hero_id, do: "Current", else: "Previous" %> Rank</h4>
                                         </div>
@@ -124,7 +122,7 @@
                                 <td>
                                     <h1 class="<%= if hero.id == @hero.id, do: "text-danger" %>">
                                         <%= if hero.pve_ranking do %>
-                                        #<%= hero.pve_ranking %>
+                                            #<%= hero.pve_ranking %>
                                         <% else %>
                                             ?
                                         <% end %>
@@ -138,12 +136,12 @@
                                     <% end %>
                                 </td>
                                 <td>
-                                    <h3 class="text-warning"><i class="fa fa-tachometer-alt"></i> <%= hero.total_xp_farm + hero.total_gold_farm %></h3>
+                                    <h3 class="text-warning" data-toggle="tooltip" title="<%= hero.total_xp_farm + hero.total_gold_farm %>"><i class="fa fa-crown"></i> <%= GH.farming_amount_label hero.total_xp_farm + hero.total_gold_farm %></h3>
                                 </td>
                                 <td>
                                     <h3 class="text-success">
                                         <i class="fa fa-clock-o"></i>
-                                        <%=if hero.finished_at do %>
+                                        <%= if hero.finished_at do %>
                                             <%= GH.finished_time(hero) %> min
                                         <% else %>
                                             ??
