--- a/lib/moba_web/templates/jungle/_jungle_target.html.eex
+++ b/lib/moba_web/templates/jungle/_jungle_target.html.eex
@@ -4,17 +4,17 @@
             <h4 class="font-17 text-white d-flex justify-content-between align-items-center mb-0">
                 <span class="font-italic text-center level text-<%= difficulty_color(@target.difficulty) %>"><%= difficulty_label @target.difficulty %><br/><span class="font-italic font-20">Level <%= @target.defender.level %></span></span>
                 <div><%= @target.defender.avatar.name %></div>
-                <span class="font-20 font-italic text-warning tooltip-cursor" data-toggle="tooltip" title="<h4>Rewards (Victory/Draw)</h4><%= reward_badges_for(@current_hero, @target.difficulty) %>"><%= difficulty_reward_label @target.difficulty %></span>
+                <span class="font-20 font-italic text-warning tooltip-cursor" data-toggle="tooltip" title="<h4>Rewards (Victory/Draw)</h4><%= reward_badges_for(@current_hero, @target.difficulty) %>"><i class="fa fa-crown text-<%= difficulty_color(@target.difficulty) %>"></i></span>
             </h4>
         </div>
         <div class="card-body p-0 d-flex align-items-center justify-content-center">
             <div class="gank-button">
                 <%= if @current_hero.pve_current_turns > 0 do %>
-                    <button phx-click="battle" id="gank-<%=@target.id%>" phx-value-id="<%=@target.id%>" class="battle-button btn btn-lg btn-icon loading-text waves-effect btn-<%=difficulty_color(@target.difficulty)%>" phx-hook="Loading" loading="Ganking...">
+                    <button phx-click="battle" id="gank-<%= @target.id %>" phx-value-id="<%= @target.id %>" class="battle-button btn btn-lg btn-icon loading-text waves-effect btn-<%= difficulty_color(@target.difficulty) %>" phx-hook="Loading" loading="Ganking...">
                       <span class="loading-text"><i class="fa fa-crosshairs mr-1"></i>Gank</span>
                     </button>
                 <% else %>
-                    <button class="battle-button btn btn-icon btn-lg waves-effect btn-<%=difficulty_color(@target.difficulty)%> disabled" data-toggle="tooltip" title="You do not have available ganks">
+                    <button class="battle-button btn btn-icon btn-lg waves-effect btn-<%= difficulty_color(@target.difficulty) %> disabled" data-toggle="tooltip" title="You do not have available ganks">
                         <i class="fa fa-crosshairs mr-1"></i>Gank
                     </button>
                 <% end %>
