--- a/lib/moba_web/templates/hero/show.html.leex
+++ b/lib/moba_web/templates/hero/show.html.leex
@@ -69,7 +69,7 @@
                                 <div class="row text-center">
                                     <div class="col">
                                         <h3 class="mb-0 text-info">
-                                            <i class="fa fa-atom"></i>
+                                            <i class="fa fa-spa"></i>
                                             <%= @hero.total_xp_farm %>
                                         </h3>
                                         <h4 class="text-info">Total XP Farm</h4>
