--- a/lib/moba_web/templates/jungle/index.html.leex
+++ b/lib/moba_web/templates/jungle/index.html.leex
@@ -100,16 +100,14 @@
                                     <%= if @current_hero.pve_state == "alive" do %>
                                         <a href="javascript:;" phx-click="show-gank" class="nav-link <%=if @farm_tab == "gank", do: "active"%>">
                                             <h2 class="d-none d-sm-inline-block">
-                                                <i class="fa fa-2x fa-crosshairs text-success"></i><br/>
-                                                Gank
+                                                <i class="fa fa-crosshairs text-success"></i> Gank
                                             </h2>
                                             <h4 class="m-0"><i class="fa fa-angle-up mr-1 text-primary"></i>XP <i class="fa fa-angle-up ml-1 mr-1 text-warning"></i>Gold</h4>
                                         </a>
                                     <% else %>
                                         <a href="javascript:;" class="no-action nav-link">
                                             <h2 class="d-none d-sm-inline-block text-muted">
-                                                <i class="fa fa-2x fa-crosshairs"></i><br/>
-                                                Gank
+                                                <i class="fa fa-crosshairs"></i> Gank
                                             </h2>
                                             <h4 class="m-0"><i class="fa fa-angle-up mr-1"></i>XP <i class="fa fa-angle-up ml-1 mr-1"></i>Gold</h4>
                                         </a>
@@ -119,16 +117,14 @@
                                     <%= if @current_hero.pve_state != "mining" do %>
                                         <a href="javascript:;" phx-click="show-meditation" class="nav-link <%=if @farm_tab == "meditation", do: "active"%>">
                                             <h2 class="d-none d-sm-inline-block">
-                                                <i class="fa fa-2x fa-spa text-primary"></i><br/>
-                                                Meditate
+                                                <i class="fa fa-spa text-primary"></i> Meditate
                                             </h2>
                                             <h4 class="m-0"><i class="fa fa-angle-double-up mr-1 text-primary"></i>XP</h4>
                                         </a>
                                     <% else %>
                                         <a href="javascript:;" class="nav-link no-action">
                                             <h2 class="d-none d-sm-inline-block text-muted">
-                                                <i class="fa fa-2x fa-spa"></i><br/>
-                                                Meditate
+                                                <i class="fa fa-spa"></i> Meditate
                                             </h2>
                                             <h4 class="m-0"><i class="fa fa-angle-double-up mr-1"></i>XP</h4>
                                         </a>
@@ -138,16 +134,14 @@
                                     <%= if @current_hero.pve_state != "meditating" do %>
                                         <a href="javascript:;" phx-click="show-mine" class="nav-link <%=if @farm_tab == "mine", do: "active"%>">
                                             <h2 class="d-none d-sm-inline-block">
-                                                <i class="fa fa-2x fa-mountain text-warning"></i><br/>
-                                                Mine
+                                                <i class="fa fa-mountain text-warning"></i> Mine
                                             </h2>
                                             <h4 class="m-0"><i class="fa fa-angle-double-up mr-1 text-warning"></i>Gold</h4>
                                         </a>
                                     <% else %>
                                         <a href="javascript:;" class="no-action nav-link">
                                             <h2 class="d-none d-sm-inline-block text-muted">
-                                                <i class="fa fa-2x fa-coins"></i><br/>
-                                                Mine
+                                                <i class="fa fa-mountain"></i> Mine
                                             </h2>
                                             <h4 class="m-0"><i class="fa fa-angle-double-up mr-1"></i>Gold</h4>
                                         </a>
