--- a/lib/moba_web/templates/layout/_navigation.html.eex
+++ b/lib/moba_web/templates/layout/_navigation.html.eex
@@ -39,7 +39,7 @@
                                     </div>
                                 </div>
                                 <div class="col-1 flex-center d-none d-md-flex">
-                                    <%= if assigns[:current_hero] do %>
+                                    <%= if assigns[:current_hero] && is_nil(assigns[:current_hero].finished_at) do %>
                                         <%= live_redirect to: Routes.live_path(@conn, MobaWeb.JungleLiveView) do %>
                                             <%= GH.hero_avatar(@current_hero, false) %>
                                         <% end %>
